force-app/main/default/objects/Landlord__c/Landlord__c.object-meta.xml
<CustomObject>
    <label>家主</label>
    <nameField>
        <label>家主名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>