force-app/main/default/objects/Landlord__c/fields/CompanyRepresentative__c.field-meta.xml
<CustomField>
    <fullName>CompanyRepresentative__c</fullName>
    <label>会社代表者名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>