force-app/main/default/objects/Landlord__c/fields/IsAbroadOwner__c.field-meta.xml
<CustomField>
    <fullName>IsAbroadOwner__c</fullName>
    <formula>Account__r.IsAbroadOwner__c</formula>
    <label>海外家主フラグ</label>
    <type>Checkbox</type>
</CustomField>