force-app/main/default/objects/Landlord__c/fields/IsCancelMainCounter__c.field-meta.xml
<CustomField>
    <fullName>IsCancelMainCounter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>(削除)解約メイン窓口フラグ</label>
    <type>Checkbox</type>
</CustomField>