force-app/main/default/objects/Landlord__c/fields/IsRenewalCounter__c.field-meta.xml
<CustomField>
    <fullName>IsRenewalCounter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>更新窓口フラグ</label>
    <type>Checkbox</type>
</CustomField>