force-app/main/default/objects/Landlord__c/fields/IsRenewalMainCounter__c.field-meta.xml
<CustomField>
    <fullName>IsRenewalMainCounter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>更新メイン窓口フラグ</label>
    <type>Checkbox</type>
</CustomField>