force-app/main/default/objects/Landlord__c/fields/IsRepresentativeLender__c.field-meta.xml
<CustomField>
    <fullName>IsRepresentativeLender__c</fullName>
    <defaultValue>false</defaultValue>
    <label>代表家主フラグ</label>
    <type>Checkbox</type>
</CustomField>