force-app/main/default/objects/Landlord__c/fields/IsShareContractor__c.field-meta.xml
<CustomField>
    <fullName>IsShareContractor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>共有名義フラグ</label>
    <type>Checkbox</type>
</CustomField>