force-app/main/default/objects/Landlord__c/fields/LandloadId__c.field-meta.xml
<CustomField>
    <fullName>LandloadId__c</fullName>
    <externalId>true</externalId>
    <label>家主ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>