force-app/main/default/objects/Landlord__c/fields/RealEstate__c.field-meta.xml
<CustomField>
    <fullName>RealEstate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>物件</label>
    <referenceTo>RealEstate__c</referenceTo>
    <relationshipLabel>家主</relationshipLabel>
    <relationshipName>RealEstateId_RealEstate</relationshipName>
    <type>Lookup</type>
</CustomField>