force-app/main/default/objects/Landlord__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>町名・番地</label>
    <type>TextArea</type>
</CustomField>